crates/openracing-ipc/tests/snapshots/snapshot_tests__error_version_incompatibility.snap
---
source: crates/openracing-ipc/tests/snapshot_tests.rs
expression: "format!(\"{err}\")"
---
Version incompatibility: client 0.9.0 is not compatible with server 1.0.0
