crates/openracing-ipc/tests/snapshots/snapshot_tests__header_device.snap
---
source: crates/openracing-ipc/tests/snapshot_tests.rs
expression: "format!(\"{bytes:02x?}\")"
---
[01, 00, 00, 01, 00, 00, 01, 00, 00, 00, 00, 00]
