crates/openracing-ipc/tests/snapshots/snapshot_tests__header_health_flagged.snap
---
source: crates/openracing-ipc/tests/snapshot_tests.rs
expression: "format!(\"{bytes:02x?}\")"
---
[04, 00, 00, 04, 00, 00, 2a, 00, 00, 00, 12, 00]
