crates/openracing-ipc/tests/snapshots/snapshot_tests__header_max_values.snap
---
source: crates/openracing-ipc/tests/snapshot_tests.rs
expression: "format!(\"{bytes:02x?}\")"
---
[ff, ff, ff, ff, ff, ff, ff, ff, ff, ff, ff, ff]
