crates/openracing-ipc/tests/snapshots/snapshot_tests__ipc_config_custom.snap
---
source: crates/openracing-ipc/tests/snapshot_tests.rs
expression: json
---
{
  "transport": {
    "transport": {
      "Tcp": {
        "address": "127.0.0.1",
        "port": 50051
      }
    },
    "max_connections": 50,
    "connection_timeout": {
      "secs": 30,
      "nanos": 0
    },
    "enable_acl": false,
    "recv_buffer_size": 65536,
    "send_buffer_size": 65536
  },
  "server_name": "openracing-ipc",
  "health_buffer_size": 2048,
  "negotiation_timeout": {
    "secs": 5,
    "nanos": 0
  },
  "enable_connection_logging": true
}
