crates/openracing-ipc/tests/snapshots/snapshot_tests__transport_type_named_pipe.snap
---
source: crates/openracing-ipc/tests/snapshot_tests.rs
expression: json
---
{
  "NamedPipe": {
    "pipe_name": "\\\\.\\pipe\\openracing"
  }
}
