crates/openracing-ipc/tests/snapshots/snapshot_tests__transport_type_tcp.snap
---
source: crates/openracing-ipc/tests/snapshot_tests.rs
expression: json
---
{
  "Tcp": {
    "address": "127.0.0.1",
    "port": 50051
  }
}
