crates/openracing-ipc/tests/snapshots/snapshot_tests__transport_type_tcp_custom.snap
---
source: crates/openracing-ipc/tests/snapshot_tests.rs
expression: json
---
{
  "Tcp": {
    "address": "192.168.1.100",
    "port": 9090
  }
}
